--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type" : "module",
   "scripts": {
     "json:server": "json-server --watch db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
