--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type" : "module",
+  "type": "commonjs",
   "scripts": {
     "json:server": "json-server --watch db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
   "author": "supermanShuvo",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "json-server": "^0.17.1"
   }
 }
